Fix locale-dependent string operations in tests
Replace locale-sensitive String.formatted() calls with explicit Locale.ENGLISH
in BundleTest.java assertion messages, and specify Locale.ROOT for toUpperCase()
operation in DocumentGenPluginTest.java to ensure consistent behavior across
different system locales.